--- a/app/views/stocks/_lookup.html.erb
+++ b/app/views/stocks/_lookup.html.erb
@@ -1,4 +1,4 @@
-<div id="stoock-lookup">
+<div id="stock-lookup">
 	<h3>Search for stocks</h3>
 	<%= form_tag search_stocks_path, remote: true, method: :get, id: 'stock-lookup-form' do %>
 		<div class="form-group row no-padding text-center col-md-12">
@@ -14,10 +14,12 @@
 			</div>
 		</div>
 	<% end %>
+	<%= render 'common/spinner' %> 
 	<% if @stock %>
 		<div id="stock-lookup-results" class="well results-block">
 			<strong>Symbol:</strong> <%= @stock.ticker %>
 			<strong>Name:</strong> <%= @stock.name %>
 			<strong>Price:</strong> <%= @stock.price %>
 	<% end %>
+	<div id="stock-lookup-errors"></div>
 </div>
